--- a/waste-audit-feb2022.Rmd
+++ b/waste-audit-feb2022.Rmd
@@ -226,8 +226,6 @@ $\bar{x} \pm t^*\frac{s}{\sqrt{n}}$
 
 more conservative than normal distribution; weight on tail ends
 
-44 (total bags) - 12 (compost bags) = 32 (trash + recycling)
-
 ```{r t-distribution-trash-plus-recycling, eval = FALSE}
 mean(boot_table_tr$perc_missorted_c) + c(-1, 1) * 2.05 * sd(boot_table_tr$perc_missorted_c) / sqrt(32)
 ```
@@ -255,6 +253,46 @@ lbls <-paste(lbls, "%", sep = " ")
 pie(slices, labels = lbls, col = c("#2ca816", "#cc2900"), main = "Missorted Trash")
 ```
 
+- Bootstrap Sample TRASH ONLY
+
+bootstrap sample
+
+```{r bootstrap-sample-trash}
+boot_table_trash <- waste_audit %>%
+  slice(1:6, 11:17, 22:24, 27:29, 32, 35, 38:41)
+
+set.seed(201)
+boot_missorted_trash <- boot_table_trash %>%
+  specify(response = perc_missorted_c) %>% 
+  generate(reps = 10000, type = "bootstrap") %>% 
+  calculate(stat = "mean")
+```
+
+confidence interval
+
+```{r confidence-interval-trash}
+ci_boot_missorted_trash <- get_ci(boot_missorted_trash, level = 0.95)
+ci_boot_missorted_trash
+```
+
+bootstrap distribution
+
+```{r bootstrap-vis-trash}
+visualize(boot_missorted_trash) +
+  shade_ci(ci_boot_missorted_trash) +
+  labs(title = "Simulated Bootstrap Distribution of Missorted Trash", x = "Sample Mean", y = "Count")
+```
+
+$\bar{x} \pm t^*\frac{s}{\sqrt{n}}$
+
+more conservative than normal distribution; weight on tail ends
+
+```{r t-distribution-trash, eval = FALSE}
+mean(boot_table_trash$perc_missorted_c) + c(-1, 1) * 2.05 * sd(boot_table_trash$perc_missorted_c) / sqrt(25)
+```
+
+tdist: 0.5823926, 0.6841086
+
 - percent of recycling that is missorted
     
 ```{r missorted-recycle}
@@ -275,6 +313,46 @@ lbls <-paste(lbls, "%", sep = " ")
 pie(slices, labels = lbls, col = c("#2ca816", "#cc2900"), main = "Missorted Recycle")
 ```
 
+- Bootstrap Sample RECYCLING ONLY
+
+bootstrap sample
+
+```{r bootstrap-sample-recycling}
+boot_table_recycling <- waste_audit %>%
+  slice(7:8, 18:19, 30, 34, 36)
+
+set.seed(201)
+boot_missorted_recycling <- boot_table_recycling %>%
+  specify(response = perc_missorted_c) %>% 
+  generate(reps = 10000, type = "bootstrap") %>% 
+  calculate(stat = "mean")
+```
+
+confidence interval
+
+```{r confidence-interval-recycling}
+ci_boot_missorted_recycling <- get_ci(boot_missorted_recycling, level = 0.95)
+ci_boot_missorted_recycling
+```
+
+bootstrap distribution
+
+```{r bootstrap-vis-recycling}
+visualize(boot_missorted_recycling) +
+  shade_ci(ci_boot_missorted_recycling) +
+  labs(title = "Simulated Bootstrap Distribution of Missorted Recycling", x = "Sample Mean", y = "Count")
+```
+
+$\bar{x} \pm t^*\frac{s}{\sqrt{n}}$
+
+more conservative than normal distribution; weight on tail ends
+
+```{r t-distribution-recycling, eval = FALSE}
+mean(boot_table_recycling$perc_missorted_c) + c(-1, 1) * 2.05 * sd(boot_table_recycling$perc_missorted_c) / sqrt(7)
+```
+
+tdist: 0.6298509, 0.8417059
+
 - percent of compost that is missorted
     
 ```{r missorted-compost}
@@ -294,6 +372,47 @@ lbls <- paste(lbls, pct)
 lbls <-paste(lbls, "%", sep = " ")
 pie(slices, labels = lbls, col = c("#2ca816", "#cc2900"), main = "Missorted Compost")
 ```
+
+- Bootstrap Sample COMPOST ONLY
+
+bootstrap sample
+
+```{r bootstrap-sample-compost}
+boot_table_compost <- waste_audit %>%
+  slice(9, 10, 20, 21, 25, 26, 31, 33, 37, 45, 47, 48)
+
+set.seed(201)
+boot_missorted_compost <- boot_table_compost %>%
+  specify(response = perc_missorted_c) %>% 
+  generate(reps = 10000, type = "bootstrap") %>% 
+  calculate(stat = "mean")
+```
+
+confidence interval
+
+```{r confidence-interval-compost}
+ci_boot_missorted_compost <- get_ci(boot_missorted_compost, level = 0.95)
+ci_boot_missorted_compost
+```
+
+bootstrap distribution
+
+```{r bootstrap-vis-compost}
+visualize(boot_missorted_compost) +
+  shade_ci(ci_boot_missorted_compost) +
+  labs(title = "Simulated Bootstrap Distribution of Missorted Compost", x = "Sample Mean", y = "Count")
+```
+
+$\bar{x} \pm t^*\frac{s}{\sqrt{n}}$
+
+more conservative than normal distribution; weight on tail ends
+
+```{r t-distribution-compost, eval = FALSE}
+mean(boot_table_compost$perc_missorted_c) + c(-1, 1) * 2.05 * sd(boot_table_compost$perc_missorted_c) / sqrt(12)
+```
+
+tdist: 0.2939167, 0.4907182
+
 
 ## Campus Compost
 - percent of all waste that could be compost
